--- a/css/main.css
+++ b/css/main.css
@@ -168,65 +168,55 @@ text-transform: uppercase;
 }
 .service .container .cards{
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    gap: 30px;
-    max-height: 100%;
+    grid-template-columns: repeat(auto-fill , minmax(250px , 1fr));
+    align-items: center;
     
     
 }
 @media (max-width:767px) {
     .service .container .cards{
-    gap: 0;
+        gap: 0;
+        
     }
 }
-.service .container .cards .col{
+.service .container .cards  {
     
     
 }
-.service .container .cards .col .card{
+.service .container .cards   .card{
+    /* border: 1px solid; */
     display: flex;
     justify-content: space-between;
-    text-align: left;
-    margin-bottom: 80px;
-    margin-top: 80px;
-}
-@media (max-width:767px) {
-    .service .container .cards .col .card{
-        flex-direction: column;
-        align-items: center;    
-        margin: 12px 0;
-    }
-    .service .container .cards .col .card.srv1{
-        margin-top: 60px;
-    }
+    text-align: center;
+    flex-direction: column;
+    align-items: center;    
+    margin-bottom: 20px;
 }
 
-.service .container .cards .col .card .text{
+
+.service .container .cards   .card .text{
     flex: 1;
+    text-align: center;
     
 }
-.service .container .cards .col .card .text h3{
+.service .container .cards   .card .text h3{
     font-size: 25px;
     color: #e97f4a;
     margin-bottom: 20px;
 }
-.service .container .cards .col .card .text h3::selection {
+.service .container .cards   .card .text h3::selection {
     color: var(--secondary-color);
 }
-.service .container .cards .col .card .text p{
+.service .container .cards   .card .text p{
     font-weight: 300;
     line-height: 1.6;
-    width: 80%;
+    width: 100%;
 }
 @media (max-width:767px) {
-    .service .container .cards .col .card .text{
-        text-align: center;
-    }
-    .service .container .cards .col .card .text p{
-        width: 100%;
-    }
+    
+    
 }
-.service .container .cards .col .card i{
+.service .container .cards   .card i{
     flex-basis: 60px;
     font-size: 30px;
 }
